# analytics_case_202402

./: .gitignore  README.md  pyproject.toml
src/dataviz/: sankey.py  sankey_bipartite.py  sankey_tree_graph.py
src/etl/: dataloader.py  loader.py  transformer.py
src/notebooks/: inspect_data.ipynb  mobile_analysis.ipynb
src/utils/: os_.py  rest_country.py
